feat: add beans and tests to reproduce the issue
# Body
#<body>

# Footer
#BREAKING-CHANGE: <desc>

# ================================================
# HEADER (mandatory)
# ================================================
#
# Type (mandatory, enum)
# ======================
# - build: Changes that affect the build system or external dependencies
# - chore: Misc (.gitignore...)
# - ci: Changes to CI configuration files and scripts
# - data: Migration scripts for DB
# - docs: Documentation only changes
# - feat: A new feature
# - fix: A bug fix
# - perf: A code change that improves performance
# - refactor: A code change that neither fixes a bug nor adds a feature
# - style: Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)
# - test: Adding missing tests or correcting existing tests
# - release: Bump version
# - revert: Revert some changes (subject = same as reverting commit. Body = "This reverts commit <hash>.")
#
# See https://github.com/angular/angular/blob/master/CONTRIBUTING.md#type
#
#
# Scope (optional, enum)
# ======================
# - core
# - common
# - customer
# - supplier
# - ...
#
# Subject (mandatory)
# ====================
# - use the imperative, present tense: "change" not "changed" nor "changes"
# - don't capitalize the first letter
# - no dot (.) at the end
#
# Issue (mandatory)
# =================
# Issue number (can be multiple)
#
#
# ================================================
# BODY (optional)
# ================================================
# - full explainations
# - use the imperative, present tense: "change" not "changed" nor "changes"
# - capitalize the first letter and add a dot at the end
#
# ================================================
# FOOTER (optional)
# ================================================
# - Add breaking change info with "BREAKING CHANGE: <desc>" (optional)
#
# ================================================
# EXAMPLES
# ===================================